[package]
name = "aoc_2021_rust"
version = "0.1.0"
authors = ["Philipp Bandow <bandow@formulastudent.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cargo-aoc = "0.3.2"
itertools = "0.9.0"
regex ="1"
countmap = "0.2.0"
itermore = "0.1"